<?xml version="1.0"?>

<package format="2">

  <name>arac2_controller_frame</name>
  <version>0.0.1</version>
  <description>None</description>
  <license>Proprietary</license>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>arac_model</depend>
  <depend>arac_msgs</depend>
  <depend>arac_joystick</depend>
  <depend>arac_controller</depend>
  <depend>arac_state_estimator</depend>
  <depend>roscpp</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>param_io</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
