<?xml version="1.0"?>

<package format="2">

  <name>tosman_controller</name>
  <version>0.0.1</version>
  <description>None</description>
  <license>Proprietary</license>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tosman_model</depend>
  <depend>arac_controller</depend>
  <depend>param_io</depend>
</package>
