<?xml version="1.0"?>

<package format="2">

  <name>tosman_sim</name>
  <version>0.0.1</version>
  <description>None </description>
  <license>Proprietary</license>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tosman_description</depend>
  <depend>tosman_gazebo</depend>
  <depend>tosman_controller</depend>
  <depend>tosman_controller_frame</depend>

</package>
