<?xml version="1.0"?>

<package format="2">

  <name>tosman_state_estimator</name>
  <version>0.0.1</version>
  <description>None</description>
  <license>Proprietary</license>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>param_io</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tosman_model</depend>
  <depend>arac_model</depend>
  <depend>kulman_msgs</depend>
  <depend>kulman_state_estimator</depend>

  <depend>boost</depend>
  <depend>eigen</depend>



</package>
